	(is_valid_expression, is_valid_term):
	* src/roff/troff/input.cpp (get_line_arg)
	(read_size)
	(is_conditional_expression_true):
	Construct integer from character literal.
	* src/roff/troff/env.cpp (adjust):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	* src/roff/troff/number.cpp (is_valid_term):
	* src/roff/troff/input.cpp (is_conditional_expression_true):
	Store return value of `tok.ch()` in local variable of `int`, not
	`char`, type.
	* src/roff/troff/env.cpp: Retype global `TAB_REPEAT_CHAR` from
	{`const`} `char` to `unsigned char`.
	* src/roff/troff/input.cpp (read_size): Use local variables to
	avoid repeated member function calls.  (Presumably a smart
	optimizer would do the equivalent on its own, but this change
	also makes a lengthy compound conditional expression shorter.)

2025-11-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Fix code style nit;
	compare integer-valued variable to integer literal instead of
	letting it pun down to a Boolean.

2025-11-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_get_long_name, read_size):
	* src/roff/troff/reg.cpp (assign_register_format_request): Fix
	code style nit; parenthesize formally complex expressions.

2025-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_name_test, return_macro_request):
	Fix code style nits.  Rather than letting an input character pun
	down to a Boolean value, compare it to an appropriate constant
	literal.

2025-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_identifier, do_get_long_name)
	(get_delimited_name): Fix code style nits.  Compare input
	character values to constant literals of appropriate type and
	signedness--they should be `unsigned char`s, since the formatter
	reads its input as bytes.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>
